--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
          </nav>
     </header>
     <main>
-        <div id="main-content"
+        <div id="main-content"></div>
         <div>
                   
             <div>
