--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
         <!-- content of the header goes here -->
          <h1 id="logo">Chiranth Jayaram</h1>
          <nav>
-            <ul id="nav ul">
+            <ul id="nav-ul">
                 <li>
                     <a href="https://www.linkedin.com/in/chiranth-jayaram-672919110/" class="navbutton">Linked In</a>
                     <a href="https://www.linkedin.com/in/chiranth-jayaram-672919110/" class="navbutton">CV</a>
