--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
                         <h2>My Achievements</h2>
                         <h3>Read time: 2 minutes</h3>
                     </header>
-                    <main> 
+                    <section> 
                         <p>Led digital transformation for 250+ global clients, including Google and Microsoft, enhancing public sector services.</p>
                         <p>Drove market expansion, securing contracts with top-tier institutions and government entities, increasing quarterly revenue by $6,000.</p>
                         <p>Facilitated adoption of digital platforms at prestigious universities like Harvard, boosting monthly revenue to $26,000.</p>
@@ -39,7 +39,7 @@
                         <p>Developed sales strategies that increased digital learning adoption by 200%.</p>
                         <p>Negotiated and closed long-term contracts with major institutions, consistently surpassing revenue targets.</p> 
                         <blockquote><cite>As Business Development Manager at Byju's Learning App</cite></blockquote>
-                    </main>
+                    </section>
                     <footer>
                         <h3>Awards</h3>
                         <img src="Photo PPS.jpeg" alt="Picture of the award">
@@ -63,11 +63,11 @@
             <br>
 
             <label for="email">Email:</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" required>
             <br>
 
             <label for="password">Password:</label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="password" id="password" required>
             <br>
 
             <label for="favorite-animal">Favorite Animal:</label>
@@ -80,7 +80,7 @@
             <br>
 
             <label for="country">Country:</label>
-            <select name="country" id="country">
+            <select name="country" id="country" required>
                 <option value="england">England</option>
                 <option value="scotland">Scotland</option>
                 <option value="wales">Wales</option>
@@ -89,7 +89,7 @@
             <br>
 
             <label for="bio">Bio:</label>
-            <textarea name="bio" id="bio" cols="30" rows="5"></textarea>
+            <textarea name="bio" id="bio" cols="30" rows="5" required></textarea>
             <br>
 
             <input type="checkbox" name="subscribe" id="subscribe">
